# cc-usage-tray

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
hooks/: statusline-rate-capture.sh
systemd/: cc-usage-monitor.service  cc-usage-monitor.timer  cc-usage-tray.service
tray/: usage-monitor-tray.py
usage_monitor/: __init__.py  ccusage_adapter.py  cli.py  config.py  dashboard.py  main.py  notify_decision.py  pause_state.py  projector.py  rate_limits_cache.py  thresholds.py
usage_monitor/tests/: test_ccusage_adapter.py  test_cli.py  test_pause_state.py  test_projector.py  test_rate_limits_cache.py  test_thresholds.py  test_tray_notifications.py
