[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-usage-tray"
version = "0.5.1"
description = "Linux tray + dashboard for Claude Code usage % (session + weekly)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "bradjohnl" }]
keywords = ["claude", "claude-code", "usage", "tray", "monitoring", "rate-limit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mock>=3"]

[project.scripts]
usage-monitor-cli = "usage_monitor.cli:main"

[project.urls]
Homepage = "https://github.com/bradjohnl/cc-usage-tray"
Issues = "https://github.com/bradjohnl/cc-usage-tray/issues"

[tool.setuptools.packages.find]
include = ["usage_monitor*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["usage_monitor/tests"]
